--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <tr>
           <td><a href="./dataset8/dataset8-checksums.html">DataSet 8</a></td>
           <td>December 19, 2025</td>
-          <td><code>N/A</code></td>
+          <td><code>10688448962</code></td>
           <td><code>1A6F2DBF3F576216C5A8D8A06E32B6A8</code></td>
           <td><code>DAFFF8EB07BFB831BB259351876A05964F01BF7D</code></td>
           <td><code>558010B96B7980ED529A2AD4EA224123A59446927E4441D23A2E8E5C2361EE07</code></td>
