--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <td><code>DAFFF8EB07BFB831BB259351876A05964F01BF7D</code></td>
           <td><code>558010B96B7980ED529A2AD4EA224123A59446927E4441D23A2E8E5C2361EE07</code></td>
           <td><code>N/A</code></td>
-          <td><a target="_blank" rel="noopener noreferrer" href="https://www.justice.gov/epstein/files/DataSet%208.zip">DOJ Direct Download Link</a></td><br><br><a target="_blank" rel="noopener noreferrer" href="https://archive.org/download/data-set-8/DataSet%208.zip">Matches archive.org Direct Download</a></td>
+          <td><a target="_blank" rel="noopener noreferrer" href="https://www.justice.gov/epstein/files/DataSet%208.zip">DOJ Direct Download Link</a><br><br><a target="_blank" rel="noopener noreferrer" href="https://archive.org/download/data-set-8/DataSet%208.zip">Matches archive.org Direct Download</a></td>
         </tr>
         <tr>
           <td><a target="_blank" rel="noopener noreferrer" href="./dataset9/dataset9-checksums.html">DataSet 9</td>
