--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="format-detection" content="telephone=no">
     <title>Epstein Files Checksums</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
   </head>
   <body>
     <h2>epsteinchecksum.com is a website and <a target="_blank" rel="noopener noreferrer" href="https://github.com/epsteinchecksum/epstein-checksum">repo</a> for keeping hashes and checksums for orginal releases of the files and dataset zips for verification.</h2>
