--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
     <h2>epsteinchecksum.com is a website and <a target="_blank" rel="noopener noreferrer" href="https://github.com/epsteinchecksum/epstein-checksum">repo</a> for keeping hashes and checksums for orginal releases of the files and dataset zips for verification.</h2>
     <br>
+    <img src="jeff.png" width="512" height="512">
+    <br>
     <h2>NO RELEASES/BACKUPS HAVE EVER OR WILL EVER BE HOSTED HERE. FOR REFERENCE ONLY.</h2>
     <h2>This website is NOT apart of the DOJ and only intends to share checksums and hashes for files shared by the DOJ from <a target="_blank" rel="noopener noreferrer" href="https://www.justice.gov/epstein">https://www.justice.gov/epstein</a></h2>
     <br>
