Reformatted HTML files

--- a/dataset10/dataset10-checksums.html
+++ b/dataset10/dataset10-checksums.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="format-detection" content="telephone=no" />
-        <title>Epstein Checksums - DataSet 10</title>
-        <link rel="stylesheet" href="..\style.css" />
-    </head>
-    <a href="javascript:history.back()"> <- Return to homepage </a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="format-detection" content="telephone=no" />
+  <title>Epstein Checksums - DataSet 10</title>
+  <link rel="stylesheet" href="..\style.css" />
+</head>
+<a href="..\index.html"> <- Return to homepage </a>
     <h2>DataSet 10.zip</h2>
     <br>
     <h3>Zip Archive Hashes</h3>
@@ -29,4 +29,5 @@
     </h4>
     <br>
     <h3>File list is VERY long like DataSet 9. 504k lines. Checksum files only.</h3>
+
 </html>
