--- a/dataset12/dataset12-checksums.html
+++ b/dataset12/dataset12-checksums.html
@@ -7,7 +7,7 @@
         <title>Epstein Checksums - DataSet 12</title>
         <link rel="stylesheet" href="..\style.css" />
     </head>
-    <a href="javascript:history.back()"> <- Return to homepage </a>
+    <a href="..\index.html"> <- Return to homepage </a>
     <h2>DataSet 12.zip</h2>
     <table>
         <thead>
