--- a/dataset9/dataset9-checksums.html
+++ b/dataset9/dataset9-checksums.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,10 +8,11 @@
     <title>Epstein Checksums - DataSet 9</title>
     <link rel="stylesheet" href="..\style.css" />
 </head>
-<a href="javascript:history.back()"> <- Return to homepage </a>
+<a href="..\index.html"> <- Return to homepage </a>
         <h2>DataSet 9.zip</h2>
         <h3>DOJ cut off the download mid-stream. File list is incomplete.</h3>
-        <h3>File list is VERY long. 531,284 lines. I removed the MD5 checksums in favor of SHA1 and have zipped the result below (15MB zipped to get past 20MB limit, 53MB uncompressed)</h3>
+        <h3>File list is VERY long. 531,284 lines. I removed the MD5 checksums in favor of SHA1 and have zipped the
+            result below (15MB zipped to get past 20MB limit, 53MB uncompressed)</h3>
         <br>
         <h4>
             <a href=".\dataset9-sha1-checksums.zip">dataset9-sha1-checksums.zip</a>
