dataset 5-7 HTML fixes

--- a/dataset6/dataset6-checksums.html
+++ b/dataset6/dataset6-checksums.html
@@ -74,7 +74,8 @@
                     <td>2026-02-07 19:18:13Z</td>
                     <td>1770491893</td>
                     <td>[empty_checksum_notes]</td>
-                    <td>[empty_notes]</td>N/A</td>
+                    <td>[empty_notes]</td>
+                    <td>N/A</td>
                 </tr>
                 <tr>
                     <td>EFTA00008529.pdf</td>
