--- a/dataset7/dataset7-checksums.html
+++ b/dataset7/dataset7-checksums.html
@@ -35,7 +35,8 @@
                     <td>2026-02-07 20:00:07Z</td>
                     <td>1770494407</td>
                     <td>[empty_checksum_notes]</td>
-                    <td>[empty_notes]</td>N/A</td>
+                    <td>[empty_notes]</td>
+                    <td>N/A</td>
                 </tr>
                 <tr>
                     <td>VOL00007.OPT</td>
@@ -46,7 +47,8 @@
                     <td>2026-02-07 20:00:07Z</td>
                     <td>1770494407</td>
                     <td>[empty_checksum_notes]</td>
-                    <td>[empty_notes]</td>N/A</td>
+                    <td>[empty_notes]</td>
+                    <td>N/A</td>
                 </tr>
                 <tr>
                     <td>EFTA00009016.pdf</td>
