--- a/dataset12/dataset12-checksums.html
+++ b/dataset12/dataset12-checksums.html
@@ -1,36 +1,65 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="format-detection" content="telephone=no" />
-        <title>Epstein Checksums - DataSet 12</title>
-        <link rel="stylesheet" href="..\style.css" />
-    </head>
-    <a href="..\index.html"> <- Return to homepage </a>
-    <h2>DataSet 12.zip</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>File Name</th>
-                <th>Relative Path</th>
-                <th>Size (in bytes)</th>
-                <th>MD5</th>
-                <th>SHA1</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>[empty]</td>
-                <td>[empty]</td>
-                <td>[empty]</td>
-                <td>
-                    <code>[empty]</code>
-                </td>
-                <td>
-                    <code>[empty]</code>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="format-detection" content="telephone=no" />
+    <title>Epstein Checksums - DataSet 12</title>
+    <link rel="stylesheet" href="..\style.css" />
+</head>
+<a href="..\index.html"> <- Return to homepage </a>
+        <h2>DataSet 12.zip</h2>
+        <br>
+        <h3>Zip Archive Hashes</h3>
+        <h4>
+            <a href="./DataSet 12.zip.md5">DataSet 12.zip.md5</a>
+        </h4>
+        <h4>
+            <a href="./DataSet 12.zip.sha1">DataSet 12.zip.sha1</a>
+        </h4>
+        <h4>
+            <a href="./DataSet 12.zip.sha256">DataSet 12.zip.sha256</a>
+        </h4>
+        <h3>File Set Hashes</h3>
+        <h4>
+            <a href="./DataSet 12_Files.md5">DataSet 12_Files.md5</a>
+        </h4>
+        <h4>
+            <a href="./DataSet 12_Files.sha1">DataSet 12_Files.sha1</a>
+        </h4>
+        <h4>
+            <a href="./DataSet 12_Files.sha256">DataSet 12_Files.sha256</a>
+        </h4>
+        <br>
+        <table>
+            <thead>
+                <tr>
+                    <th>File Name</th>
+                    <th>Relative Path</th>
+                    <th>Size (in bytes)</th>
+                    <th>MD5</th>
+                    <th>SHA1</th>
+                    <th>Checksum UTC Timestamp</th>
+                    <th>Checksum Unix Timestamp</th>
+                    <th>Checksum Notes</th>
+                    <th>Notes</th>
+                    <th>Theoretical DOJ Link</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>[empty]</td>
+                    <td>[empty]</td>
+                    <td>[empty]</td>
+                    <td>
+                        <code>[empty]</code>
+                    </td>
+                    <td>
+                        <code>[empty]</code>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
 </html>
