--- a/dataset11/dataset11-checksums.html
+++ b/dataset11/dataset11-checksums.html
@@ -13,53 +13,24 @@
         <br>
         <h3>Zip Archive Hashes</h3>
         <h4>
-            <a href="./DataSet 11.zip.md5">DataSet 11.zip.md5</a>
+            <a href="DataSet 11.zip.md5">DataSet 11.zip.md5</a>
         </h4>
         <h4>
-            <a href="./DataSet 11.zip.sha1">DataSet 11.zip.sha1</a>
+            <a href="DataSet 11.zip.sha1">DataSet 11.zip.sha1</a>
         </h4>
         <h4>
-            <a href="./DataSet 11.zip.sha256">DataSet 11.zip.sha256</a>
+            <a href="DataSet 11.zip.sha256">DataSet 11.zip.sha256</a>
         </h4>
         <h3>File Set Hashes</h3>
         <h4>
-            <a href="./DataSet 11_Files.md5">DataSet 11_Files.md5</a>
+            <a href="DataSet 11_Files-md5.zip">DataSet 11_Files-md5.zip - 23 MB Uncompressed</a>
         </h4>
         <h4>
-            <a href="./DataSet 11_Files.sha1">DataSet 11_Files.sha1</a>
+            <a href="DataSet 11_Files-md5.zip">DataSet 11_Files-sha1.zip - 25.6 MB Uncompressed</a>
         </h4>
         <h4>
-            <a href="./DataSet 11_Files.sha256">DataSet 11_Files.sha256</a>
+            <a href="DataSet 11_Files-sha256.zip">DataSet 11_Files-sha256.zip - 33.2 MB Uncompressed</a>
         </h4>
         <br>
-        <table>
-            <thead>
-                <tr>
-                    <th>File Name</th>
-                    <th>Relative Path</th>
-                    <th>Size (in bytes)</th>
-                    <th>MD5</th>
-                    <th>SHA1</th>
-                    <th>Checksum UTC Timestamp</th>
-                    <th>Checksum Unix Timestamp</th>
-                    <th>Checksum Notes</th>
-                    <th>Notes</th>
-                    <th>Theoretical DOJ Link</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>[empty]</td>
-                    <td>[empty]</td>
-                    <td>[empty]</td>
-                    <td>
-                        <code>[empty]</code>
-                    </td>
-                    <td>
-                        <code>[empty]</code>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-
+        File list is VERY long like DataSet 9 and 10. 331k lines. Checksum files only.
 </html>
