--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
           <td><code>27441913130</code></td>
           <td><code>D29AEDBA383B94ACF4B1B473800332E0</code></td>
           <td><code>574950C0F86765E897268834AC6EF38B370CAD2A</code></td>
-          <td><code>9714273B9E325F0A1F406063C795DB32F5DA2095B75E602D4C4FBABA5DE3ED80</code></td>
-          <td><a target="_blank" rel="noopener noreferrer" href="https://github.com/rodrigopolo/epstein-doj-library-sha256">rodrigopolo/epstein-doj-library-sha256 - Feb 3 2026</a></td>
+          <td><code>9714273B9E325F0A1F406063C795DB32F5DA2095B75E602D4C4FBABA5DE3ED80</code></td>https://archive.org/details/epsteindoj-disclosuresdata-set-11-files
+          <td><a target="_blank" rel="noopener noreferrer" href="https://github.com/rodrigopolo/epstein-doj-library-sha256">rodrigopolo/epstein-doj-library-sha256 - Feb 3 2026</a><br><br><a target="_blank" rel="noopener noreferrer" href="https://archive.org/details/epsteindoj-disclosuresdata-set-11-files">Matches archive.org Direct Download</a></td>
           <td><a target="_blank" rel="noopener noreferrer" href="https://www.justice.gov/epstein/files/DataSet%2011.zip">DOJ Direct Download Link</a></td>
         </tr>
         <tr>
