--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2>NO RELEASES/BACKUPS HAVE EVER OR WILL EVER BE HOSTED HERE. FOR REFERENCE ONLY.</h2>
     <h2>This website is NOT apart of the DOJ and only intends to share checksums and hashes for files shared by the DOJ from <a target="_blank" rel="noopener noreferrer" href="https://www.justice.gov/epstein">https://www.justice.gov/epstein</a></h2>
     <br>
-    <td><a href="Dataset_1-8_to_10-12.sha1">DataSet 1-8 to Dataset 10-12 SHA1 Checksum File</a></td>
+    <a href="Dataset_1-8_to_10-12.sha1">DataSet 1-8 to Dataset 10-12 SHA1 Checksum File</a>
     <br>
     <table>
       <thead class="no-wrap-col">
